Add content to index

--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+
+<body>
+  <Header>
+    <h1>Lesson 9</h1>
     <p>
-      Here's my first git file
+      Here's my second git file.
     </p>
+  </header>
+  <main>
+    <h2>Lesson Practical</2>
+
+    <p>
+      &copy; Marianne 2017
+    </p>
+</main>
+<div>
+  <button type="button" name="Button 1"></button>
+  <button type="button" name="Button 2"></button>
+  <button type="button" name="Button 3"></button>
+</div>
+
   </body>
 </html>
