--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <link rel="stylesheet" type="text/css" href="css/reset.css" />
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <title>test page 2</title>
 </head>
 
 <body>
+
   <Header>
     <h1>Lesson 9</h1>
     <p>
@@ -14,17 +17,18 @@
     </p>
   </header>
   <main>
-    <h2>Lesson Practical</2>
+    <h2>Lesson Practical</h2>
 
     <p>
       &copy; Marianne 2017
     </p>
-</main>
-<div>
-  <button type="button" name="Button 1"></button>
-  <button type="button" name="Button 2"></button>
-  <button type="button" name="Button 3"></button>
-</div>
+  </main>
+  <div>
+    <button type="button" name="Button 1">Button 1</button>
+    <button type="button" name="Button 2">Button 2</button>
+    <button type="button" name="Button 3">Button 3</button>
+  </div>
 
-  </body>
+</body>
+
 </html>
