Added javascript files

--- a/index.html
+++ b/index.html
@@ -19,16 +19,29 @@
   <main>
     <h2>Lesson Practical</h2>
 
+
+  </main>
+  <div>
+    <button onclick="alert('Hello World!')">Button 1</button>
+    <button onclick="helloWorld()">Button 2</button>
+    <button onclick="buttonThree()">Button 3</button>
+  </div>
+  <h3 id="headerthree"></h3>
+  <footer>
     <p>
       &copy; Marianne 2017
     </p>
-  </main>
-  <div>
-    <button type="button" name="Button 1">Button 1</button>
-    <button type="button" name="Button 2">Button 2</button>
-    <button type="button" name="Button 3">Button 3</button>
-  </div>
 
+  </footer>
+  <!--
+<script>
+console.log("Page has loaded! I can't believe it's not butter!");
+function helloWorld() {
+  console.log('Hello 2nd World!');
+}
+</script> <-->
+<script type="text/javascript" src="js/script.js">
+</script>
 </body>
 
 </html>
