--- a/indexbasic.htm
+++ b/indexbasic.htm
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/reset.css" />
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="css/stylebasic.css" />
   <title>test page 2</title>
 </head>
 
 <body>
 
   <Header>
-  <!--  <div>
+    <div>
       <h1>Lesson 9</h1>
     </div>
 
